# bytes-rs

./: Cargo.toml  README.md
src/: buffer.rs  lib.rs  ring_vec.rs
